--- a/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
+++ b/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
@@ -1,8 +1,6 @@
-
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer  class="sidenav" fixedInViewport opened="true" mode="side">
-    <h2>mindflix</h2>
-
+    <h3>mindflix logo</h3>
     <mat-nav-list class="main-options">
       <mat-list-item class="sidenav-item">
         <button mat-button routerLink="/home">
@@ -50,9 +48,7 @@
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
-
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-
 </mat-sidenav-container>
