feat: added toolbar component

--- a/src/app/public/components/toolbar-login/toolbar-login.component.html
+++ b/src/app/public/components/toolbar-login/toolbar-login.component.html
@@ -1,1 +1,3 @@
-<p>toolbar-login works!</p>
+<mat-toolbar class="toolbar-login">
+  <img src="movie-icon-white.png" alt="logo" width="100">
+</mat-toolbar>
