--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="welcoming-message">
+  <h2>bienvenido, <span style="font-weight: bold">{{user.name}}</span></h2>
+</div>
+<app-recommendation-content></app-recommendation-content>
