--- a/src/app/forums/pages/forum-list/forum-list.component.html
+++ b/src/app/forums/pages/forum-list/forum-list.component.html
@@ -1,1 +1,3 @@
-<p>forum-list works!</p>
+<h1>Forums</h1>
+<app-list-rooms></app-list-rooms>
+<button (click)="openCreateRoomDialog()">Crear foro</button>
