--- a/src/app/lists/pages/favorites/favorites.component.html
+++ b/src/app/lists/pages/favorites/favorites.component.html
@@ -1,1 +1,40 @@
-<p>favorites works!</p>
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="end">
+
+  <mat-tab label="Favoritos">
+    <h1 class="list-name"> Favoritos</h1>
+    <div class="list-container responsive-grid">
+
+      <div *ngFor="let card of cards()">
+        <mat-card>
+          <img mat-card-image src="mindflix-logo.png" alt="mindflix logo" width="200" >
+          <mat-card-header>
+            <mat-card-title>{{ card.title }}</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{ card.type }}</p>
+            <p>{{ card.description }}</p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+    </div>
+  </mat-tab>
+
+  <mat-tab label="Ver Más Tarde">
+    <h1 class="list-name"> Ver Más Tarde</h1>
+    <div class="list-container responsive-grid">
+      <mat-card *ngFor="let card of cards()">
+        <img mat-card-image src="mindflix-logo.png" alt="mindflix logo" width="200" >
+        <mat-card-header>
+          <mat-card-title>{{ card.title }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>{{ card.type }}</p>
+          <p>{{ card.description }}</p>
+        </mat-card-content>
+      </mat-card>
+
+    </div>
+  </mat-tab>
+
+</mat-tab-group>
