--- a/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
+++ b/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
@@ -21,7 +21,7 @@
           </button>
         </mat-list-item>
         <mat-list-item class="sidenav-item">
-          <button mat-button class="button-item">
+          <button mat-button class="button-item" routerLink="/lists">
             <mat-icon class="icon-style">bookmarks</mat-icon>
             Listas
           </button>
