--- a/src/app/forums/pages/forum-list/forum-list.component.html
+++ b/src/app/forums/pages/forum-list/forum-list.component.html
@@ -1,3 +1,19 @@
-<h1>Forums</h1>
-<app-list-rooms></app-list-rooms>
-<button (click)="openCreateRoomDialog()">Crear foro</button>
+  <mat-tab label="Favoritos">
+    <h1 class="list-name"> Foros</h1>
+    <div class="list-container responsive-grid">
+
+      <div *ngFor="let card of cards()">
+        <mat-card>
+          <img mat-card-image src="mindflix-logo.png" alt="mindflix logo" width="200" >
+          <mat-card-header>
+            <mat-card-title>{{ card.title }}</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{ card.type }}</p>
+            <p>{{ card.description }}</p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+    </div>
+  </mat-tab>
