--- a/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
+++ b/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
@@ -27,7 +27,7 @@
           </button>
         </mat-list-item>
         <mat-list-item class="sidenav-item" >
-          <button mat-button class="button-item">
+          <button mat-button routerLink="/forums" class="button-item">
             <mat-icon class="icon-style">group</mat-icon>
             Foros
           </button>
