--- a/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
+++ b/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
@@ -33,7 +33,7 @@
           </button>
         </mat-list-item>
         <mat-list-item class="sidenav-item">
-          <button mat-button class="button-item">
+          <button mat-button routerLink="/event" class="button-item">
             <mat-icon class="icon-style">public</mat-icon>
             Eventos
           </button>
