fix: event-item.html

--- a/src/app/events/components/event-item/event-item.component.html
+++ b/src/app/events/components/event-item/event-item.component.html
@@ -1,9 +1,3 @@
-<!-- Título y subtítulo -->
-<div class="header">
-  <h1>Evento</h1>
-  <h3>Para ti</h3>
-</div>
-
 <!-- Card de evento -->
 <mat-card class="content-card">
   <div class="card-content">
@@ -16,7 +10,7 @@
       <mat-card-header>
         <h3>{{ event.title }}</h3>
         <button mat-fab extended class="info-button">
-          <mat-icon>info</mat-icon>Info
+          <mat-icon>Info</mat-icon>
         </button>
       </mat-card-header>
 
