feat: added event-content

--- a/src/app/events/pages/event-content/event-content.component.html
+++ b/src/app/events/pages/event-content/event-content.component.html
@@ -1,1 +1,8 @@
-<p>event-content works!</p>
+<!-- Título y subtítulo -->
+<div class="header">
+  <h1>Evento</h1>
+  <h3>Para ti</h3>
+</div>
+
+<!-- Lista de eventos -->
+<app-event-list [events]="events"></app-event-list>
