--- a/src/app/lists/pages/favorites/favorites.component.css
+++ b/src/app/lists/pages/favorites/favorites.component.css
@@ -8,12 +8,16 @@
 
 img {
   width:100%;
-  height:100px;
+  height: 200px;
   object-fit: cover;
 }
 
 .responsive-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 2fr);
   gap: 32px;
+}
+
+.responsive-grid > *:empty {
+  display: none;
 }
