--- a/src/app/events/components/event-list/event-list.component.html
+++ b/src/app/events/components/event-list/event-list.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="1">
-  <app-event-item *ngFor="let event of events" [event]="event">
+<div class="event-container">
+  <app-event-item *ngFor="let event of events" [event]="event" class="event-item">
   </app-event-item>
-</mat-grid-list>
+</div>
