--- a/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
+++ b/src/app/public/components/sidebar-navigator/sidebar-navigator.component.html
@@ -15,10 +15,14 @@
           </button>
         </mat-list-item>
         <mat-list-item class="sidenav-item">
-          <button mat-button routerLink="/explorer" class="button-item">
+          <button mat-button [matMenuTriggerFor]="exploreMenu" class="button-item">
             <mat-icon class="icon-style">menu</mat-icon>
             Explorar
           </button>
+          <mat-menu #exploreMenu="matMenu">
+            <button mat-menu-item routerLink="/explorer">Contenido Disponible</button>
+            <button mat-menu-item routerLink="/recentContent">Contenido Reciente</button>
+          </mat-menu>
         </mat-list-item>
         <mat-list-item class="sidenav-item">
           <button mat-button class="button-item">
