feat: added pie chart component

--- a/src/app/public/components/pie-chart-content/pie-chart-content.component.html
+++ b/src/app/public/components/pie-chart-content/pie-chart-content.component.html
@@ -1,1 +1,9 @@
-<p>pie-chart-content works!</p>
+<mat-card class="pie-container">
+  <h4>Principales estados de animo</h4>
+  <div style="display: flex">
+    <canvas baseChart
+            [data]="pieChartData"
+            [type]="pieChartType">
+    </canvas>
+  </div>
+</mat-card>
