--- a/src/app/public/components/recommendation-content/recommendation-content.component.html
+++ b/src/app/public/components/recommendation-content/recommendation-content.component.html
@@ -5,7 +5,7 @@
   <mat-card-content class="recommended-content" *ngIf="content.length > 0; else noRecommendations">
     <div *ngFor="let item of content">
       <mat-card class="recommended-item">
-        <mat-card-title>{{item.title}}</mat-card-title>
+        <mat-card-title><mat-icon>star</mat-icon>{{item.title}}</mat-card-title>
         <mat-card-subtitle>{{item.type}}</mat-card-subtitle>
         <mat-card-content>{{item.description}}</mat-card-content>
       </mat-card>
