feat: change default image with images from db.json

--- a/src/app/events/components/event-item/event-item.component.html
+++ b/src/app/events/components/event-item/event-item.component.html
@@ -2,8 +2,8 @@
 <mat-card class="content-card">
   <div class="card-content">
     <!-- Imagen fija "mindflix-logo.png" -->
-    <img alt="MindFlix Logo"
-         src="mindflix-logo.png" mat-card-image class="imgCard"/>
+    <img [alt]="event.title"
+         [src]="event.image" mat-card-image class="imgCard"/>
 
     <div class="text-content">
       <!-- Título y botón Info al costado -->
